--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "build": "tsc && node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc && node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +12,8 @@
     "typescript": "^2.8.3"
   },
   "dependencies": {
-    "@types/node": "^7.0.62"
+    "@types/node": "^7.0.62",
+    "@types/node-fetch": "^1.6.9",
+    "node-fetch": "^2.1.2"
   }
 }
