--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@types/node": "^7.0.62",
     "@types/node-fetch": "^1.6.9",
-    "node-fetch": "^2.1.2"
+    "node-fetch": "^2.1.2",
+    "normalize.css": "^8.0.0",
+    "webshot": "^0.18.0"
   }
 }
