static file server

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "build": "tsc && node index.js"
+    "build": "tsc && node index.js",
+    "server": "tsc && node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,10 +13,11 @@
     "typescript": "^2.8.3"
   },
   "dependencies": {
+    "@types/express": "^4.11.1",
     "@types/node": "^7.0.62",
     "@types/node-fetch": "^1.6.9",
+    "express": "^4.16.3",
     "node-fetch": "^2.1.2",
-    "normalize.css": "^8.0.0",
-    "webshot": "^0.18.0"
+    "normalize.css": "^8.0.0"
   }
 }
