screenshot made simple

--- a/config.json
+++ b/config.json
@@ -1,6 +1,8 @@
 {
+    "downloadImages": true,
     "limit": 60,
     "dataFile": "bookshelf.md",
     "htmlFile": "index.html",
-    "port": 8000
+    "assetsFolder": "assets",
+    "port": 80
 }
