--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "build": "tsc && node index.js",
-    "server": "tsc && node server.js",
-    "screenshot": "docker container run -it --rm -v $(pwd):/usr/src/app zenika/alpine-chrome --no-sandbox --screenshot --hide-scrollbars https://www.chromestatus.com/"
+    "build": "tsc && node index",
+    "server": "tsc && node server",
+    "start": "tsc && node index && node server"
   },
   "author": "",
   "license": "ISC",
